@@ -18,11 +18,12 @@ package com.google.zetasql.toolkit.catalog.typeparser;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import com.google.common.collect.ImmutableList;
 import com.google.zetasql.StructType.StructField;
 import com.google.zetasql.Type;
 import com.google.zetasql.TypeFactory;
 import com.google.zetasql.ZetaSQLType.TypeKind;
-import java.util.List;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
@@ -32,13 +33,12 @@ class ZetaSQLTypeParserTest {
 
   @Test
   void parseSimpleTypes() {
-    Map<String, TypeKind> inputsToExpectedKinds =
-        Map.of(
-            "STRING", TypeKind.TYPE_STRING,
-            "INT64", TypeKind.TYPE_INT64,
-            "NUMERIC", TypeKind.TYPE_NUMERIC,
-            "INTERVAL", TypeKind.TYPE_INTERVAL,
-            "JSON", TypeKind.TYPE_JSON);
+    Map<String, TypeKind> inputsToExpectedKinds = new HashMap<>();
+    inputsToExpectedKinds.put("STRING", TypeKind.TYPE_STRING);
+    inputsToExpectedKinds.put("INT64", TypeKind.TYPE_INT64);
+    inputsToExpectedKinds.put("NUMERIC", TypeKind.TYPE_NUMERIC);
+    inputsToExpectedKinds.put("INTERVAL", TypeKind.TYPE_INTERVAL);
+    inputsToExpectedKinds.put("JSON", TypeKind.TYPE_JSON);
 
     Stream<Executable> assertions =
         inputsToExpectedKinds.entrySet().stream()
@@ -83,7 +83,7 @@ class ZetaSQLTypeParserTest {
     String typeStr = "STRUCT<f1 STRING, f2 INT64>";
     Type expectedType =
         TypeFactory.createStructType(
-            List.of(
+            ImmutableList.of(
                 new StructField("f1", TypeFactory.createSimpleType(TypeKind.TYPE_STRING)),
                 new StructField("f2", TypeFactory.createSimpleType(TypeKind.TYPE_INT64))));
 
@@ -98,7 +98,7 @@ class ZetaSQLTypeParserTest {
     String typeStr = "STRUCT<f1 STRING, f2 NUMERIC(10, 2)>";
     Type expectedType =
         TypeFactory.createStructType(
-            List.of(
+            ImmutableList.of(
                 new StructField("f1", TypeFactory.createSimpleType(TypeKind.TYPE_STRING)),
                 new StructField("f2", TypeFactory.createSimpleType(TypeKind.TYPE_NUMERIC))));
 
@@ -113,7 +113,7 @@ class ZetaSQLTypeParserTest {
     String typeStr = "ARRAY<STRUCT<f1 STRING, f2 INT64>>";
     Type structType =
         TypeFactory.createStructType(
-            List.of(
+            ImmutableList.of(
                 new StructField("f1", TypeFactory.createSimpleType(TypeKind.TYPE_STRING)),
                 new StructField("f2", TypeFactory.createSimpleType(TypeKind.TYPE_INT64))));
     Type expectedType = TypeFactory.createArrayType(structType);
@@ -131,12 +131,12 @@ class ZetaSQLTypeParserTest {
         TypeFactory.createArrayType(TypeFactory.createSimpleType(TypeKind.TYPE_STRING));
     Type innerStructType =
         TypeFactory.createStructType(
-            List.of(
+            ImmutableList.of(
                 new StructField("f1_1", stringArrayType),
                 new StructField("f1_2", TypeFactory.createSimpleType(TypeKind.TYPE_NUMERIC))));
     Type expectedType =
         TypeFactory.createStructType(
-            List.of(new StructField("f1", TypeFactory.createArrayType(innerStructType))));
+            ImmutableList.of(new StructField("f1", TypeFactory.createArrayType(innerStructType))));
 
     assertEquals(
         ZetaSQLTypeParser.parse(typeStr),
